# auth-service

./: .env  .gitignore  main.py  pyproject.toml
document/ddl/: v0.1.sql
src/: app.py
src/api/v1/: __init__.py  auth_routes.py  user_routes.py
src/common/: context.py  logging.py  setting.py
src/db/: database.py  redis_client.py
src/middlewares/: request_id.py
src/models/: __init__.py  user.py  user_token.py
src/repo/: __init__.py  user_repo.py  user_token_repo.py
src/schemas/: __init__.py  api_response.py  auth.py  user.py
src/services/: auth_service.py  user_service.py
src/utils/: datetime_utils.py  hash_utils.py  jwt_utils.py  utils.py
